Feat: create ticket in table
