# app/fiber/handlers/table_handler.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"github.com/gofiber/fiber/v2"
+	"github.com/ushieru/pos/domain"
 	"github.com/ushieru/pos/dto"
 	"github.com/ushieru/pos/service"
 )
@@ -15,6 +16,7 @@ func (h *TableHandler) SetupRoutes(app *fiber.App) {
 	tables.Get("/", h.listTables)
 	tables.Get("/:id", h.findTable)
 	tables.Post("/", h.saveTable)
+	tables.Post("/:id/tickets", h.saveTableTicket)
 	tables.Put("/:id", h.updateTable)
 	tables.Delete("/:id", h.deleteTable)
 }
@@ -104,6 +106,24 @@ func (h *TableHandler) updateTable(c *fiber.Ctx) error {
 func (h *TableHandler) deleteTable(c *fiber.Ctx) error {
 	id, _ := c.ParamsInt("id")
 	table, err := h.service.Delete(uint(id))
+	if err != nil {
+		return fiber.NewError(err.Code, err.Message)
+	}
+	return c.JSON(table)
+}
+
+// @Router /tables/{id}/tickets [POST]
+// @Security ApiKeyAuth
+// @Param id path int true "Table ID"
+// @Tags Tables
+// @Accepts json
+// @Produce json
+// @Success 200 {array} domain.Table
+// @Failure default {object} domain.AppError
+func (h *TableHandler) saveTableTicket(c *fiber.Ctx) error {
+	id, _ := c.ParamsInt("id")
+	user := c.Locals("session").(*domain.User)
+	table, err := h.service.CreateTicket(uint(id), &user.Account)
 	if err != nil {
 		return fiber.NewError(err.Code, err.Message)
 	}
